--- a/todo.html
+++ b/todo.html
@@ -7,11 +7,13 @@
 </head>
 
 <body>
-    <!-- <div class="task-completed">100% completed</div>
-        <div class="progress" id="progress-bar">
-            <div class="completion"></div>
-        </div> -->
     <section class="todo-list">
+           
+            <div class="task-completion">100% completed</div>
+            <div class="progress" id="progress-bar">
+                <div class="completion"></div>
+            </div>
+
         <h1>To do list</h1>
         <input type="text" id="textItem" autofocus>
         <p>
